--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
   <body>
     <div class="menu-container">
@@ -66,7 +67,7 @@
   <h2 class="media1">PAINT JOBS</h2>
   <p class="media1">Profesional painting indors nad outdoors</p>
 </div>
-<div class="kuca"> 
+<div class="kuca">
   <img class="kucaikona" src="/images/house-chimney-crack-solid (1).svg" alt="">
   <div class="cssshape6"></div>
   <div class="cssshape7"></div>
@@ -132,7 +133,7 @@
         </div>
 
         <div class="fcf-form-group">
-            <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Send Message</button>
+            <button type="submit" id="fcf-button" class="btn--primary ">Send Message</button>
         </div>
 
        
@@ -141,5 +142,17 @@
     </div>
 
 </div>
+<footer>
+  <div class="random3"></div>
+  <div class="random2">
+    <p class="footertxt">Find us on</p>
+
+    <a href="#" class="fa fa-facebook"></a>
+    <a href="#" class="fa fa-twitter"></a>
+    <a href="#" class="fa fa-linkedin"></a>
+    <a href="#" class="fa fa-instagram"></a>
+  </div>
+<p class="footertxt1">All rights reserved</p>
+</footer>
   </body>
 </html>
