--- a/services.html
+++ b/services.html
@@ -46,59 +46,46 @@
           <div class="droplet"></div>
           <div class="droplet1"></div>
         </div>
-        <div class="about">
-            <h4 class="media-heading2 hed">Gallery</h4>
-            <a id="about"></a>
-            <p>Here is some of our work
-            </p>
-
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="/images/imagejpeg_0.JPG">
-      <img src="/images/imagejpeg_0.jpg" alt="Cinque Terre" width="600" height="400">
-    </a>
-  </div>
-</div>
-
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="/images/imagejpeg_0.JPG">
-      <img src="/images/imagejpeg_0.jpg" alt="Forest" width="600" height="400">
-    </a>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="/images/imagejpeg_0.JPG">
-      <img src="/images/imagejpeg_0.jpg" alt="Northern Lights" width="600" height="400">
-    </a>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="/images/imagejpeg_0.JPG">
-      <img src="/images/imagejpeg_0.jpg" alt="Mountains" width="600" height="400">
-    </a>
-  </div>
-</div>
-
-<div class="clearfix"></div>
-
-
-        
-      <div class="random5">
-        <p class="footertxt2" style="color: black;">Find us on</p>
+      </section>
+      <section class="c-section">
+       
+        <ul class="c-services">
+            <li class="c-services__item">
+                <h3>Painting</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adificiis accusantium..</p>
+            </li>
+            <li class="c-services__item">
+                <h3>asdasd</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, voluptatem?.</p>
+            </li>
+            <li class="c-services__item">
+                <h3>Lorem, ipsum.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis incidunt libero cupiditate, magni aliquid perferendis expedita fugiat accusamus nostrum..</p>
+            </li>
+            <li class="c-services__item">
+                <h3>Lorem, ipsum.</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure natus officia assumenda. Reiciendis, quam impedit?</p>
+            </li>
+            <li class="c-services__item">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus necessitatibus unde ex!</p>
+            </li>
+            <li class="c-services__item">
+                <h3>Lorem, ipsum.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, deleniti natus! Incidunt. </p>
+            </li>
+        </ul>
+    </section>
+      <div class="random3"></div>
+      <div class="random2">
+        <p class="footertxt">Find us on</p>
 
         <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-twitter"></a>
         <a href="#" class="fa fa-linkedin"></a>
         <a href="#" class="fa fa-instagram"></a>
       </div>
-      <p class="footertxt2">All rights reserved</p>
+      <p class="footertxt1">All rights reserved</p>
     </footer>
   </body>
 </html>
