--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="droplet"></div>
           <div class="droplet1"></div>
         </div>
-        <a class="btn btn--primary" href="/services.html">Services</a>
+        <div><a class="btn btn--primary" href="/services.html">Services</a></div>
         <div class="random"></div>
       </section>
       <section>
@@ -58,7 +58,7 @@
         </div>
       </section>
       <section>
-        <div class="delatnosti">
+        <div class="grid-1-3  delatnosti">
           <div class="paint">
             <img class="cetkica" src="/images/brush-solid (1).svg" alt="" />
             <div class="cssshape4"></div>
